<resources>
    <string name="app_name">ToDoList</string>
    <string name="item_removed">Item Removed</string>
    <string name="undo">UNDO</string>
    <string name="filename">reminders</string>
    <string name="hint_title">Title</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="sat">Sat</string>
    <string name="recurring">Recurring</string>
    <string name="create_new_reminder">Create New Reminder</string>
    <string name="fri">Fri</string>
    <string name="update_reminder">Save Changes</string>
</resources>