<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newreminder.NewReminderFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ceiling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ceiling">

        <EditText
            android:id="@+id/new_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/nReminder_title_margin"
            android:hint="@string/hint_title"
            android:minHeight="48dp"
            tools:ignore="Autofill,TextFields" />
        <TimePicker
            android:id="@+id/new_reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_margin="@dimen/nReminder_time_margin" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkbox_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
            <CheckBox
                android:id="@+id/checkbox_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:theme="@style/CustomCheckbox"
                android:scaleX="0.9"
                android:scaleY="0.9" />
        </LinearLayout>
        <CheckBox
            android:id="@+id/checkbox_recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recurring"
            android:theme="@style/CustomCheckbox"
            android:scaleX="0.9"
            android:scaleY="0.9" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_reminder"
            app:theme="@style/CustomButton"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="@dimen/create_reminder_margin"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>