<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editreminder.EditReminderFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ceiling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"/>

        <EditText
            android:id="@+id/update_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/nReminder_title_margin"
            android:hint="@string/hint_title"
            android:minHeight="48dp"
            tools:ignore="Autofill,TextFields"
            app:layout_constraintTop_toBottomOf="@id/ceiling"/>
        <TimePicker
            android:id="@+id/update_reminder_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_margin="@dimen/nReminder_time_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/recurring_toggle"
            app:layout_constraintRight_toLeftOf="@id/checkboxes"
            app:layout_constraintTop_toBottomOf="@id/update_reminder_title" />
        <LinearLayout
            android:id="@+id/checkboxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@id/update_reminder_time"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/update_reminder_title">
            <CheckBox
                android:id="@+id/checkbox_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
            <CheckBox
                android:id="@+id/checkbox_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:theme="@style/CustomCheckbox"
                android:minHeight="48dp" />
        </LinearLayout>
        <Switch
            android:id="@+id/recurring_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recurring"
            android:theme="@style/CustomSwitch"
            android:switchPadding="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/checkboxes"
            app:layout_constraintRight_toLeftOf="@id/checkboxes"
            app:layout_constraintTop_toBottomOf="@id/update_reminder_time" />
        <Button
            android:id="@+id/update_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_reminder"
            app:theme="@style/CustomButton"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_margin="@dimen/create_reminder_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recurring_toggle"/>
</androidx.constraintlayout.widget.ConstraintLayout>